meja/tests/gadt-syntax-error.meja
type t = A('a) : t;
